# RealTimeRenderer

./: CMakeLists.txt  catmullromspline.cpp  catmullromspline.hpp  renderer.cpp  renderer.h  scene.cpp  scene.h  simulation.cpp  simulation.h
assets/sandstorm/: down.tga  up.tga
assets/sponza/: sponza.mtl
shaders/: blur.frag  blur.vert  depthoffield.frag  depthvis.frag  depthvis.vert  lighting.frag  lighting.vert  normaldepth.frag  normaldepth.vert  preamble.glsl  scene.frag  scene.vert  shadow.vert  skybox.frag  skybox.vert
